# E2OC

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml  requirements.txt  run_e2oc.py
algorithms/: __init__.py
algorithms/nsga2/: __init__.py  nsga2_tsp.py
docs/: E2OC_overview.md  QuickGuide.md
e2oc/: __init__.py  mcts.py  rotation.py  storage.py
e2oc/utils/: __init__.py  code_to_program.py  result_save.py  warmup_cache.py
examples/tsp_biobjective/: config.py  evaluator.py  operators.py  prompts.py
instances/BiTSP/: bi_objective_tsp_gaussian_ring.pt  city_num_19.pt
instances/BiTSP/testdata_tsp_size20/: Instance_0.tsp  Instance_1.tsp  Instance_10.tsp  Instance_100.tsp  Instance_101.tsp  Instance_102.tsp  Instance_103.tsp  Instance_104.tsp  Instance_105.tsp  Instance_106.tsp  Instance_107.tsp  Instance_108.tsp  Instance_109.tsp  Instance_11.tsp  Instance_110.tsp  Instance_111.tsp  Instance_112.tsp  Instance_113.tsp  Instance_114.tsp  Instance_115.tsp  Instance_116.tsp  Instance_117.tsp  Instance_118.tsp  Instance_119.tsp  Instance_12.tsp  Instance_120.tsp  Instance_121.tsp  Instance_122.tsp  Instance_123.tsp  Instance_124.tsp  Instance_125.tsp  Instance_126.tsp  Instance_127.tsp  Instance_128.tsp  Instance_129.tsp  Instance_13.tsp  Instance_130.tsp  Instance_131.tsp  Instance_132.tsp  Instance_133.tsp  (+160 more)
llm4ad/: __init__.py
llm4ad/base/: __init__.py  code.py  evaluate.py  generator.py  modify_code.py  sample.py
llm4ad/method/: __init__.py
llm4ad/tools/: __init__.py
problems/tsp/: __init__.py  problem_biTSP.py  tsp_instance.py
(+25 files in other folders)
